Some fixes & improvements